--- a/adblock-betafish/button/popup.html
+++ b/adblock-betafish/button/popup.html
@@ -63,7 +63,7 @@
             <div i18n="blocked_ads" class="header"></div>
             <div style="padding:2px 0px 0px 2px;">
               <span i18n="blocked_n_on_this_page" i18n_replacement_el="page_blocked_count"> <a class="block_count_number" id="page_blocked_count"> </a> </span>
-              <span i18n="blocked_n_in_total" i18n_replacement_el="total_blocked_count" class="float-right"> <a class="block_count_number" id="total_blocked_count"> </a> </span>
+              <span i18n="blocked_n_in_total" i18n_replacement_el="total_blocked_count" class="right"> <a class="block_count_number" id="total_blocked_count"> </a> </span>
             </div>
         </div>
 
