Updated with version: 3.48.0 changes

--- a/adblock-betafish/options/filters.html
+++ b/adblock-betafish/options/filters.html
@@ -26,9 +26,13 @@
       <div id="language_list"></div>
       <div id="language_dropdown_container">
         <span i18n="languagedropdowndescription"></span>
-        <select id='language_select'>
-          <option value="" i18n="selectlanguage2"></option>
-        </select>
+        <div id="language-select-box">
+          <select id='language_select'>
+            <option value="" i18n="selectlanguage2"></option>
+          </select>
+          <i class="material-icons md-18">arrow_drop_down_circle</i>
+        </div>
+
       </div>
 
       <h2 i18n="otherfilters" class="paragraph-title"></h2>
