--- a/adblock-betafish/options/support.html
+++ b/adblock-betafish/options/support.html
@@ -1,13 +1,13 @@
 <!doctype html>
 
-<div class="option-page-box" id="support-page">
+<div class="option-page-box">
   <div class="option-page-content">
 
     <h1 i18n="adblocksupport" class="page-title"></h1>
 
     <h2 i18n="foundbug" class="paragraph-title"></h2>
     <div class="section-padding bottom-line">
-      <a i18n="bugreport" i18n_replacement_el="bugreport" href="adblock-option-bug-report.html" target="_blank">
+      <a i18n="bugreport" i18n_replacement_el="bugreport" href="adblock-options-bug-report.html" target="_blank">
         <span id="bugreport" class="link-text-color"></span>
       </a>
       <span class='english-only do-not-display'>(<span i18n='englishonly'></span>)</span>
