--- a/adblock-betafish/options/themes.html
+++ b/adblock-betafish/options/themes.html
@@ -7,25 +7,20 @@
 
     <section id="popup-menu-themes">
       <h2 i18n="popup_menu_theme" class="paragraph-title bottom-line"></h2>
-      <div class="add-space-between">
+      <div class="theme-section-row">
 
         <div class="theme-wrapper">
           <div class="theme-box default-theme" data-key="popup_menu" data-theme="default_theme">
             <div class="theme-box-top add-space-between">
+              <i class="material-icons md-64 search">search</i>
               <div>
                 <div i18n="header" class="bold"></div>
                 <div i18n="text_body" class="normal-line-height break-text"></div>
                 <div class="red-text bold">12345</div>
               </div>
               <div class="icons-preview add-space-between">
-                <svg class="svg-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                  <path d="M0 0h24v24H0z" fill="none"/>
-                  <path class="icon-color" d="M19 2H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h4l3 3 3-3h4c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-6 16h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 11.9 13 12.5 13 14h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"/>
-                </svg>
-                <svg class="svg-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
-                  <path fill="none" d="M0 0h20v20H0V0z"/>
-                  <path class="icon-color" d="M15.95 10.78c.03-.25.05-.51.05-.78s-.02-.53-.06-.78l1.69-1.32c.15-.12.19-.34.1-.51l-1.6-2.77c-.1-.18-.31-.24-.49-.18l-1.99.8c-.42-.32-.86-.58-1.35-.78L12 2.34c-.03-.2-.2-.34-.4-.34H8.4c-.2 0-.36.14-.39.34l-.3 2.12c-.49.2-.94.47-1.35.78l-1.99-.8c-.18-.07-.39 0-.49.18l-1.6 2.77c-.1.18-.06.39.1.51l1.69 1.32c-.04.25-.07.52-.07.78s.02.53.06.78L2.37 12.1c-.15.12-.19.34-.1.51l1.6 2.77c.1.18.31.24.49.18l1.99-.8c.42.32.86.58 1.35.78l.3 2.12c.04.2.2.34.4.34h3.2c.2 0 .37-.14.39-.34l.3-2.12c.49-.2.94-.47 1.35-.78l1.99.8c.18.07.39 0 .49-.18l1.6-2.77c.1-.18.06-.39-.1-.51l-1.67-1.32zM10 13c-1.65 0-3-1.35-3-3s1.35-3 3-3 3 1.35 3 3-1.35 3-3 3z"/>
-                </svg>
+                <i class="material-icons md-18">live_help</i>
+                <i class="material-icons md-18">settings</i>
               </div>
             </div>
             <div class="theme-box-bottom">
@@ -33,27 +28,25 @@
               <input type="radio" name="popup-menu-theme" class="invisible-radio-button" />
             </div>
           </div>
-          <img class="theme-selected-icon" />
+          <span class="md-stack theme-selected-icon">
+            <i class="material-icons md-stack-2x">lens</i>
+            <i class="material-icons md-stack-1x">done</i>
+          </span>
         </div>
 
         <div class="theme-wrapper">
           <div class="theme-box dark-theme" data-key="popup_menu" data-theme="dark_theme">
 
             <div class="theme-box-top add-space-between">
+              <i class="material-icons md-64 search">search</i>
               <div>
                 <div i18n="header" class="bold"></div>
                 <div i18n="text_body" class="normal-line-height break-text"></div>
                 <div class="red-text bold">12345</div>
               </div>
               <div class="icons-preview add-space-between">
-                <svg class="svg-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                  <path d="M0 0h24v24H0z" fill="none"/>
-                  <path class="icon-color" d="M19 2H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h4l3 3 3-3h4c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-6 16h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 11.9 13 12.5 13 14h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"/>
-                </svg>
-                <svg class="svg-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
-                  <path fill="none" d="M0 0h20v20H0V0z"/>
-                  <path class="icon-color" d="M15.95 10.78c.03-.25.05-.51.05-.78s-.02-.53-.06-.78l1.69-1.32c.15-.12.19-.34.1-.51l-1.6-2.77c-.1-.18-.31-.24-.49-.18l-1.99.8c-.42-.32-.86-.58-1.35-.78L12 2.34c-.03-.2-.2-.34-.4-.34H8.4c-.2 0-.36.14-.39.34l-.3 2.12c-.49.2-.94.47-1.35.78l-1.99-.8c-.18-.07-.39 0-.49.18l-1.6 2.77c-.1.18-.06.39.1.51l1.69 1.32c-.04.25-.07.52-.07.78s.02.53.06.78L2.37 12.1c-.15.12-.19.34-.1.51l1.6 2.77c.1.18.31.24.49.18l1.99-.8c.42.32.86.58 1.35.78l.3 2.12c.04.2.2.34.4.34h3.2c.2 0 .37-.14.39-.34l.3-2.12c.49-.2.94-.47 1.35-.78l1.99.8c.18.07.39 0 .49-.18l1.6-2.77c.1-.18.06-.39-.1-.51l-1.67-1.32zM10 13c-1.65 0-3-1.35-3-3s1.35-3 3-3 3 1.35 3 3-1.35 3-3 3z"/>
-                </svg>
+                <i class="material-icons md-18">live_help</i>
+                <i class="material-icons md-18">settings</i>
               </div>
             </div>
 
@@ -62,7 +55,10 @@
               <input type="radio" name="popup-menu-theme" class="invisible-radio-button" />
             </div>
           </div>
-          <img class="theme-selected-icon" />
+          <span class="md-stack theme-selected-icon">
+            <i class="material-icons md-stack-2x">lens</i>
+            <i class="material-icons md-stack-1x">done</i>
+          </span>
         </div>
 
         <div class="theme-box teaser">
@@ -79,25 +75,20 @@
 
     <section id="options-page-themes">
       <h2 i18n="options_page_theme" class="paragraph-title bottom-line"></h2>
-      <div class="add-space-between">
+      <div class="theme-section-row">
 
         <div class="theme-wrapper">
           <div class="theme-box default-theme" data-key="options_page" data-theme="default_theme">
             <div class="theme-box-top add-space-between">
+              <i class="material-icons md-64 search">search</i>
               <div>
                 <div i18n="header" class="bold"></div>
                 <div i18n="text_body" class="normal-line-height break-text"></div>
                 <div class="red-text bold">12345</div>
               </div>
               <div class="icons-preview add-space-between">
-                <svg class="svg-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                  <path d="M0 0h24v24H0z" fill="none"/>
-                  <path class="icon-color" d="M19 2H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h4l3 3 3-3h4c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-6 16h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 11.9 13 12.5 13 14h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"/>
-                </svg>
-                <svg class="svg-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
-                  <path fill="none" d="M0 0h20v20H0V0z"/>
-                  <path class="icon-color" d="M15.95 10.78c.03-.25.05-.51.05-.78s-.02-.53-.06-.78l1.69-1.32c.15-.12.19-.34.1-.51l-1.6-2.77c-.1-.18-.31-.24-.49-.18l-1.99.8c-.42-.32-.86-.58-1.35-.78L12 2.34c-.03-.2-.2-.34-.4-.34H8.4c-.2 0-.36.14-.39.34l-.3 2.12c-.49.2-.94.47-1.35.78l-1.99-.8c-.18-.07-.39 0-.49.18l-1.6 2.77c-.1.18-.06.39.1.51l1.69 1.32c-.04.25-.07.52-.07.78s.02.53.06.78L2.37 12.1c-.15.12-.19.34-.1.51l1.6 2.77c.1.18.31.24.49.18l1.99-.8c.42.32.86.58 1.35.78l.3 2.12c.04.2.2.34.4.34h3.2c.2 0 .37-.14.39-.34l.3-2.12c.49-.2.94-.47 1.35-.78l1.99.8c.18.07.39 0 .49-.18l1.6-2.77c.1-.18.06-.39-.1-.51l-1.67-1.32zM10 13c-1.65 0-3-1.35-3-3s1.35-3 3-3 3 1.35 3 3-1.35 3-3 3z"/>
-                </svg>
+                <i class="material-icons md-18">live_help</i>
+                <i class="material-icons md-18">settings</i>
               </div>
             </div>
             <div class="theme-box-bottom">
@@ -105,26 +96,24 @@
               <input type="radio" name="options-page-theme" class="invisible-radio-button" />
             </div>
           </div>
-          <img class="theme-selected-icon" />
+          <span class="md-stack theme-selected-icon">
+            <i class="material-icons md-stack-2x">lens</i>
+            <i class="material-icons md-stack-1x">done</i>
+          </span>
         </div>
 
         <div class="theme-wrapper">
           <div class="theme-box dark-theme" data-key="options_page" data-theme="dark_theme">
             <div class="theme-box-top add-space-between">
+              <i class="material-icons md-64 search">search</i>
               <div>
                 <div i18n="header" class="bold"></div>
                 <div i18n="text_body" class="normal-line-height break-text"></div>
                 <div class="red-text bold">12345</div>
               </div>
               <div class="icons-preview add-space-between">
-                <svg class="svg-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                  <path d="M0 0h24v24H0z" fill="none"/>
-                  <path class="icon-color" d="M19 2H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h4l3 3 3-3h4c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-6 16h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 11.9 13 12.5 13 14h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"/>
-                </svg>
-                <svg class="svg-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
-                  <path fill="none" d="M0 0h20v20H0V0z"/>
-                  <path class="icon-color" d="M15.95 10.78c.03-.25.05-.51.05-.78s-.02-.53-.06-.78l1.69-1.32c.15-.12.19-.34.1-.51l-1.6-2.77c-.1-.18-.31-.24-.49-.18l-1.99.8c-.42-.32-.86-.58-1.35-.78L12 2.34c-.03-.2-.2-.34-.4-.34H8.4c-.2 0-.36.14-.39.34l-.3 2.12c-.49.2-.94.47-1.35.78l-1.99-.8c-.18-.07-.39 0-.49.18l-1.6 2.77c-.1.18-.06.39.1.51l1.69 1.32c-.04.25-.07.52-.07.78s.02.53.06.78L2.37 12.1c-.15.12-.19.34-.1.51l1.6 2.77c.1.18.31.24.49.18l1.99-.8c.42.32.86.58 1.35.78l.3 2.12c.04.2.2.34.4.34h3.2c.2 0 .37-.14.39-.34l.3-2.12c.49-.2.94-.47 1.35-.78l1.99.8c.18.07.39 0 .49-.18l1.6-2.77c.1-.18.06-.39-.1-.51l-1.67-1.32zM10 13c-1.65 0-3-1.35-3-3s1.35-3 3-3 3 1.35 3 3-1.35 3-3 3z"/>
-                </svg>
+                <i class="material-icons md-18">live_help</i>
+                <i class="material-icons md-18">settings</i>
               </div>
             </div>
             <div class="theme-box-bottom">
@@ -132,7 +121,10 @@
               <input type="radio" name="options-page-theme" class="invisible-radio-button" />
             </div>
           </div>
-          <img class="theme-selected-icon" />
+          <span class="md-stack theme-selected-icon">
+            <i class="material-icons md-stack-2x">lens</i>
+            <i class="material-icons md-stack-1x">done</i>
+          </span>
         </div>
 
         <div class="theme-box teaser">
