Updated with version: 4.5.0 changes

--- a/adblock-betafish/options/image-swap.html
+++ b/adblock-betafish/options/image-swap.html
@@ -31,13 +31,18 @@
         <input id="no-channel" data-channel-id="none" type="checkbox" class="invisible-overlay" />
       </li>
 
-      <li class="channel-box">
+      <li class="channel-box image-box">
         <a
           id="get-it-now-cats"
           target="_blank"
           href="https://getadblock.com/premium/enrollment/"
         ></a>
-        <img id="cats" class="channel-image" i18n-alt="catchannelswitchlabel" />
+        <img
+          id="cats"
+          class="channel-image"
+          i18n-alt="catchannelswitchlabel"
+          src="icons/adblock-picreplacement-images-cat-grayscale.png"
+        />
         <i
           class="material-icons circle-icon-bg-24 selected-icon"
           role="img"
@@ -56,13 +61,18 @@
         />
       </li>
 
-      <li class="channel-box">
+      <li class="channel-box image-box">
         <a
           id="get-it-now-dogs"
           target="_blank"
           href="https://getadblock.com/premium/enrollment/"
         ></a>
-        <img id="dogs" class="channel-image" i18n-alt="dogchannelswitchlabel" />
+        <img
+          id="dogs"
+          class="channel-image"
+          i18n-alt="dogchannelswitchlabel"
+          src="icons/adblock-picreplacement-images-dog-grayscale.png"
+        />
         <i
           class="material-icons circle-icon-bg-24 selected-icon"
           role="img"
@@ -82,13 +92,18 @@
         />
       </li>
 
-      <li class="channel-box">
+      <li class="channel-box image-box">
         <a
           id="get-it-now-landscapes"
           target="_blank"
           href="https://getadblock.com/premium/enrollment/"
         ></a>
-        <img id="landscapes" class="channel-image" i18n-alt="landscapechannelswitchlabel" />
+        <img
+          id="landscapes"
+          class="channel-image"
+          i18n-alt="landscapechannelswitchlabel"
+          src="icons/adblock-picreplacement-images-landscape-grayscale.png"
+        />
         <i
           class="material-icons circle-icon-bg-24 selected-icon"
           role="img"
