--- a/adblock-betafish/options/mab.html
+++ b/adblock-betafish/options/mab.html
@@ -39,7 +39,11 @@
             <section class="mab-feature-body">
               <span i18n="make_adblock_yours_description"></span>
               <section class="feature-preview">
-                <img id="themes-preview" i18n-alt="example_themes" />
+                <img
+                  id="themes-preview"
+                  i18n-alt="example_themes"
+                  src="icons/themes_darktext.svg"
+                />
               </section>
             </section>
           </a>
@@ -56,7 +60,11 @@
             <section class="mab-feature-body">
               <span i18n="see_photos_no_ads_description"></span>
               <section class="feature-preview">
-                <img id="image-swap-preview" i18n-alt="image_swap_example" />
+                <img
+                  id="image-swap-preview"
+                  i18n-alt="image_swap_example"
+                  src="icons/image-swap-preview@2x.png"
+                />
               </section>
             </section>
           </a>
@@ -73,7 +81,7 @@
             <section class="mab-feature-body">
               <span i18n="sync_your_settings_description"></span>
               <section class="feature-preview">
-                <img id="sync-preview" i18n-alt="sync_example" />
+                <img id="sync-preview" i18n-alt="sync_example" src="icons/sync-preview.svg" />
               </section>
             </section>
           </a>
