--- a/adblock-betafish/options/index.html
+++ b/adblock-betafish/options/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="adblock-options-tabs.css" />
     <link rel="stylesheet" href="adblock-options-mab.css" />
     <script src="polyfill.js"></script>
-    <script src="adblock-jquery.js"></script>
-    <script src="adblock-jquery.cookie.js"></script>
+    <script src="jquery-3.4.1.min.js"></script>
+    <script src="purify.min.js"></script>
     <script src="adblock-functions.js"></script>
     <script src="adblock-options-tabs.js"></script>
     <script src="adblock-options-index.js"></script>
@@ -19,7 +19,12 @@
       <div id="sidebar-content">
         <section id="sidebar-content-top">
           <a id="adblock-logo-link" href="https://www.getadblock.com" target="_blank">
-            <img id="sidebar-adblock-logo" i18n-alt="adblock_home" />
+            <img
+              id="sidebar-adblock-logo"
+              i18n-alt="adblock_home"
+              src="icons/default_theme/logo.svg"
+            />
+            <img id="sidebar-adblock-logo-narrow" i18n-alt="adblock_home" src="icons/ab-38.png" />
           </a>
 
           <nav id="sidebar-tabs">
