Updated with version: 4.6.0 changes

--- a/adblock-betafish/button/popup.html
+++ b/adblock-betafish/button/popup.html
@@ -15,13 +15,13 @@
       <div id="help_container">
         <div id="header">
           <span tabindex="0" id="back_icon" class="back-button" role="button">
-            <i class="material-icons md-18" role="image" i18n-aria-label="back_help_flow"
+            <i class="material-icons md-18" role="img" i18n-aria-label="back_help_flow"
               >chevron_left</i
             >
           </span>
           <span id="help_title"></span>
           <span tabindex="0" id="close_icon" class="close-button" role="button">
-            <i class="material-icons md-18" role="image" i18n-aria-label="close_help_flow">close</i>
+            <i class="material-icons md-18" role="img" i18n-aria-label="close_help_flow">close</i>
           </span>
         </div>
         <div id="separator_help" class="separator"></div>
