--- a/adblock-betafish/options/image-swap.html
+++ b/adblock-betafish/options/image-swap.html
@@ -27,7 +27,7 @@
     <ul id="channel-options">
       <li class="channel-box">
         <p i18n="do_not_swap_ads"></p>
-        <i class="material-icons circle-icon-bg-24 selected-icon">check_circle</i>
+        <i class="material-icons circle-icon-bg-24 selected-icon" role="img">check_circle</i>
         <input id="no-channel" data-channel-id="none" type="checkbox" class="invisible-overlay" />
       </li>
 
