--- a/adblock-betafish/options/index.html
+++ b/adblock-betafish/options/index.html
@@ -94,6 +94,24 @@
         </section>
 
         <section id="sidebar-content-bottom">
+          <section id="rate-us-cta" class="hover-shadow" style="display: none;">
+            <section id="rate-us-tooltip">
+              <div i18n="show_some_love"></div>
+              <div i18n="support_with_a_review"></div>
+            </section>
+
+            <a
+              href="https://chrome.google.com/webstore/detail/adblock-%E2%80%94-best-ad-blocker/gighmmpiobklfepjocnamgkkbiglidom/reviews"
+              id="rate-us"
+              class="btn secondary"
+              target="_blank"
+            >
+              <i class="material-icons md-18" role="img" aria-hidden="true">favorite</i>
+              &nbsp;&nbsp;
+              <span i18n="love_adblock"></span>
+            </a>
+          </section>
+
           <div id="sidebar-social-links">
             <a href="https://facebook.com/heres.adblock" target="_blank">
               <i class="adblock-icon">facebook</i>
