--- a/adblock-betafish/options/mab.html
+++ b/adblock-betafish/options/mab.html
@@ -33,7 +33,9 @@
         <div class="mab-feature hover-shadow">
           <a href="#mab-themes">
             <section class="mab-feature-header">
-              <i class="material-icons md-24 header-icon" aria-hidden="true">featured_video</i>
+              <i class="material-icons md-24 header-icon" role="img" aria-hidden="true"
+                >featured_video</i
+              >
               <span i18n="make_adblock_yours_title"></span>
             </section>
             <section class="mab-feature-body">
@@ -54,7 +56,7 @@
         <div class="mab-feature hover-shadow">
           <a href="#mab-image-swap">
             <section class="mab-feature-header">
-              <i class="material-icons md-24 header-icon" aria-hidden="true">photo</i>
+              <i class="material-icons md-24 header-icon" role="img" aria-hidden="true">photo</i>
               <span i18n="see_photos_no_ads_title"></span>
             </section>
             <section class="mab-feature-body">
