Updated with version: 4.13.0 changes

--- a/adblock-betafish/options/general.html
+++ b/adblock-betafish/options/general.html
@@ -249,6 +249,20 @@
 
       <li class="section-padding checkbox-indentation">
         <span class="checkbox md-stack">
+          <input type="checkbox" class="feature" id="enable_onpageMessages" />
+          <i class="unchecked material-icons" role="img" aria-hidden="true">lens</i>
+          <i
+            class="checked material-icons circle-icon-bg-24 checkbox-icon"
+            role="img"
+            aria-hidden="true"
+            >check_circle</i
+          >
+        </span>
+        <label for="enable_onpageMessages" i18n="onpage_messages"></label>
+      </li>
+
+      <li class="section-padding checkbox-indentation">
+        <span class="checkbox md-stack">
           <input type="checkbox" class="feature" id="enable_show_advanced_options" />
           <i class="unchecked material-icons" role="img" aria-hidden="true">lens</i>
           <i
