Updated with version: 4.14.0 changes

--- a/adblock-betafish/options/index.html
+++ b/adblock-betafish/options/index.html
@@ -121,6 +121,23 @@
               <span i18n="love_adblock"></span>
             </a>
           </section>
+          <section id="waitlist-cta" class="hover-shadow" style="display: none;">
+            <section id="waitlist-tooltip">
+              <div i18n="vpn_coming_soon"></div>
+              <div i18n="join_vpn_waitlist"></div>
+            </section>
+
+            <a
+              href="https://getadblock.com/beta/vpn"
+              id="vpn-waitlist-link"
+              class="btn secondary"
+              target="_blank"
+            >
+              <span class="red-text" i18n="callout_new_feature"></span>&nbsp;<span
+                i18n="adblock_vpn"
+              ></span>
+            </a>
+          </section>
 
           <div id="sidebar-social-links">
             <a href="https://facebook.com/heres.adblock" target="_blank">
