Updated with version: 4.15.0 changes

--- a/adblock-betafish/options/index.html
+++ b/adblock-betafish/options/index.html
@@ -141,13 +141,13 @@
 
           <div id="sidebar-social-links">
             <a href="https://facebook.com/heres.adblock" target="_blank">
-              <i class="adblock-icon">facebook</i>
+              <i class="adblock-icon" aria-label="facebook" role="img">facebook</i>
             </a>
             <a id="twitter-icon-link" href="https://twitter.com/getadblock" target="_blank">
-              <i class="adblock-icon">twitter</i>
+              <i class="adblock-icon" aria-label="twitter" role="img">twitter</i>
             </a>
             <a href="https://www.linkedin.com/company/adblock/" target="_blank">
-              <i class="adblock-icon">linkedin</i>
+              <i class="adblock-icon" aria-label="linkedin" role="img">linkedin</i>
             </a>
           </div>
           <div class="top-line">
