Updated with version: 4.19.0 changes

--- a/adblock-betafish/button/popup.html
+++ b/adblock-betafish/button/popup.html
@@ -177,7 +177,13 @@
           role="button"
         ></div>
 
-        <div tabindex="0" id="div_whitelist_channel" class="menu-entry" role="button"></div>
+        <div
+          tabindex="0"
+          id="div_whitelist_channel"
+          class="menu-entry"
+          role="button"
+          i18n="whitelist_channel"
+        ></div>
 
         <div id="separator0" class="separator"></div>
 
