--- a/adblock-betafish/options/general.html
+++ b/adblock-betafish/options/general.html
@@ -113,6 +113,34 @@
         </div>
       </li>
 
+      <li class="checkbox-indentation section-padding">
+        <div>
+          <span class="checkbox md-stack">
+            <input type="checkbox" class="feature" id="enable_twitch_channel_allowlist" />
+            <i class="unchecked material-icons" role="img" aria-hidden="true">lens</i>
+            <i
+              class="checked material-icons circle-icon-bg-24 checkbox-icon"
+              role="img"
+              aria-hidden="true"
+              >check_circle</i
+            >
+          </span>
+          <label for="enable_twitch_channel_allowlist" i18n="allowlisting_twitch_channels"></label>
+          <a
+            class="help-link-icon right"
+            href="https://help.getadblock.com/support/solutions/articles/6000148339-does-adblock-block-ads-on-twitch-"
+            target="_blank"
+          >
+            <i class="material-icons md-18" role="img" i18n-aria-label="learn_more_without_period"
+              >live_help</i
+            >
+          </a>
+        </div>
+        <div class="extra-info">
+          <div i18n="require_restart_browser" class="italic no-indent"></div>
+        </div>
+      </li>
+
       <li class="section-padding checkbox-indentation">
         <span class="checkbox md-stack">
           <input type="checkbox" class="feature" id="prefs__shouldShowBlockElementMenu" />
@@ -217,34 +245,6 @@
             >live_help</i
           >
         </a>
-      </li>
-
-      <li class="checkbox-indentation section-padding">
-        <div>
-          <span class="checkbox md-stack">
-            <input type="checkbox" class="feature" id="enable_twitch_hiding" />
-            <i class="unchecked material-icons" role="img" aria-hidden="true">lens</i>
-            <i
-              class="checked material-icons circle-icon-bg-24 checkbox-icon"
-              role="img"
-              aria-hidden="true"
-              >check_circle</i
-            >
-          </span>
-          <label for="enable_twitch_hiding" i18n="twitch_hiding_option"></label>
-          <a
-            class="help-link-icon right"
-            href="https://help.getadblock.com/support/solutions/articles/6000148339-does-adblock-block-ads-on-twitch-"
-            target="_blank"
-          >
-            <i class="material-icons md-18" role="img" i18n-aria-label="learn_more_without_period"
-              >live_help</i
-            >
-          </a>
-        </div>
-        <div class="extra-info">
-          <div i18n="require_restart_browser" class="italic no-indent"></div>
-        </div>
       </li>
 
       <li class="section-padding checkbox-indentation">
