Updated with version: 4.20.0 changes

--- a/adblock-betafish/button/popup.html
+++ b/adblock-betafish/button/popup.html
@@ -189,6 +189,14 @@
 
         <div
           tabindex="0"
+          id="div_manage_subscribed_channel"
+          class="menu-entry"
+          role="button"
+          i18n="manage_subscribed_channel"
+        ></div>
+
+        <div
+          tabindex="0"
           i18n="enable_adblock"
           id="div_enable_adblock_on_this_page"
           class="menu-entry"
