--- a/adblock-betafish/options/general.html
+++ b/adblock-betafish/options/general.html
@@ -92,7 +92,7 @@
       </li>
 
       <li class="section-padding checkbox-indentation">
-        <div>
+        <div class="section-padding">
           <span class="checkbox md-stack">
             <input type="checkbox" class="feature" id="enable_youtube_channel_whitelist" />
             <i class="unchecked material-icons" role="img" aria-hidden="true">lens</i>
@@ -108,8 +108,32 @@
             i18n="allow_whitelisting_youtube_channels2"
           ></label>
         </div>
-        <div class="extra-info">
+        <div class="extra-info bottom-line">
           <div i18n="require_restart_browser" class="italic"></div>
+        </div>
+        <div class="toggle-indentation add-space-between section-padding">
+          <label class="switch" for="enable_youtube_manage_subscribed">
+            <input type="checkbox" class="feature" id="enable_youtube_manage_subscribed" />
+            <span class="slider round"></span>
+            <span i18n="youtube_manage_subscribed"></span>
+          </label>
+          <span class="text-help-link-icon">
+            <span
+              id="youtube_manage_subscribed_link"
+              class="link-text-color pointer"
+              i18n="settings"
+            ></span>
+            &nbsp;
+            <a
+              class="inline"
+              href="https://help.getadblock.com/support/solutions/articles/6000067131-can-i-use-adblock-and-still-allow-ads-on-my-favorite-youtube-channels-"
+              target="_blank"
+            >
+              <i class="material-icons md-18" role="img" i18n-aria-label="learn_more_without_period"
+                >live_help</i
+              >
+            </a>
+          </span>
         </div>
       </li>
 
