Updated with version: 4.21.0 changes

--- a/adblock-betafish/options/general.html
+++ b/adblock-betafish/options/general.html
@@ -246,7 +246,7 @@
         </a>
       </li>
 
-      <li class="add-space-between checkbox-indentation section-padding">
+      <li id="local_cdn_option" class="add-space-between checkbox-indentation section-padding">
         <div>
           <span class="checkbox md-stack">
             <input type="checkbox" class="feature" id="enable_local_cdn" />
