Updated with version: 4.22.0 changes

--- a/adblock-betafish/button/popup.html
+++ b/adblock-betafish/button/popup.html
@@ -35,24 +35,26 @@
       <div id="menu-items">
         <div id="titletext">
           <img class="header-logo" i18n-alt="adblock_logo" />
-
-          <span id="header-icons">
-            <i
-              tabindex="10"
-              class="material-icons md-18"
-              id="help_link"
-              role="img"
-              i18n-aria-label="help"
-              >live_help</i
-            >
-            <i
-              tabindex="10"
-              class="material-icons md-18"
-              id="svg_options"
-              role="img"
-              i18n-aria-label="settings"
-              >settings</i
-            >
+          <span id="header-info">
+            <span id="premium_status_msg" i18n="premium"></span>
+            <span id="header-icons">
+              <i
+                tabindex="10"
+                class="material-icons md-18"
+                id="help_link"
+                role="img"
+                i18n-aria-label="help"
+                >live_help</i
+              >
+              <i
+                tabindex="10"
+                class="material-icons md-18"
+                id="svg_options"
+                role="img"
+                i18n-aria-label="settings"
+                >settings</i
+              >
+            </span>
           </span>
         </div>
 
