--- a/adblock-betafish/options/mab.html
+++ b/adblock-betafish/options/mab.html
@@ -17,7 +17,10 @@
       <!-- End: Payment section visible only to free MAB users -->
 
       <header id="premium-tab-header">
-        <h1 class="page-title"></h1>
+        <span class="align-items-center">
+          <span class="page-title"></span>
+          <span id="premium_status_msg" class="status_msg"> </span>
+        </span>
         <a
           id="manage-subscription"
           class="link-text-color"
