Updated with version: 4.24.0 changes

--- a/adblock-betafish/options/image-swap.html
+++ b/adblock-betafish/options/image-swap.html
@@ -290,6 +290,126 @@
         />
       </li>
 
+      <li class="channel-box image-box">
+        <a
+          id="get-it-now-goats"
+          target="_blank"
+          href="https://getadblock.com/premium/enrollment/"
+        ></a>
+        <img
+          id="goats"
+          class="channel-image"
+          i18n-alt="goatchannelswitchlabel"
+          src="icons/adblock-picreplacement-images-goat-grayscale.png"
+        />
+        <i
+          class="material-icons circle-icon-bg-24 selected-icon"
+          role="img"
+          i18n-aria-label="selected"
+          >check_circle</i
+        >
+        <i class="adblock-icon circle-icon-bg-24 locked-icon" role="img" i18n-aria-label="selected"
+          >lock_circle</i
+        >
+        <i class="material-icons md-64 hovered" role="img" aria-hidden="true">lock_open</i>
+        <input
+          id="GoatsChannel"
+          type="checkbox"
+          class="invisible-overlay"
+          i18n-aria-label="goatchannelswitchlabel"
+        />
+      </li>
+
+      <li class="channel-box image-box">
+        <a
+          id="get-it-now-ocean"
+          target="_blank"
+          href="https://getadblock.com/premium/enrollment/"
+        ></a>
+        <img
+          id="ocean"
+          class="channel-image"
+          i18n-alt="oceanchannelswitchlabel"
+          src="icons/adblock-picreplacement-images-ocean-grayscale.png"
+        />
+        <i
+          class="material-icons circle-icon-bg-24 selected-icon"
+          role="img"
+          i18n-aria-label="selected"
+          >check_circle</i
+        >
+        <i class="adblock-icon circle-icon-bg-24 locked-icon" role="img" i18n-aria-label="selected"
+          >lock_circle</i
+        >
+        <i class="material-icons md-64 hovered" role="img" aria-hidden="true">lock_open</i>
+        <input
+          id="OceanChannel"
+          type="checkbox"
+          class="invisible-overlay"
+          i18n-aria-label="oceanchannelswitchlabel"
+        />
+      </li>
+
+      <li class="channel-box image-box">
+        <a
+          id="get-it-now-food"
+          target="_blank"
+          href="https://getadblock.com/premium/enrollment/"
+        ></a>
+        <img
+          id="food"
+          class="channel-image"
+          i18n-alt="foodchannelswitchlabel"
+          src="icons/adblock-picreplacement-images-food-grayscale.png"
+        />
+        <i
+          class="material-icons circle-icon-bg-24 selected-icon"
+          role="img"
+          i18n-aria-label="selected"
+          >check_circle</i
+        >
+        <i class="adblock-icon circle-icon-bg-24 locked-icon" role="img" i18n-aria-label="selected"
+          >lock_circle</i
+        >
+        <i class="material-icons md-64 hovered" role="img" aria-hidden="true">lock_open</i>
+        <input
+          id="FoodChannel"
+          type="checkbox"
+          class="invisible-overlay"
+          i18n-aria-label="foodchannelswitchlabel"
+        />
+      </li>
+
+      <li class="channel-box image-box">
+        <a
+          id="get-it-now-bird"
+          target="_blank"
+          href="https://getadblock.com/premium/enrollment/"
+        ></a>
+        <img
+          id="bird"
+          class="channel-image"
+          i18n-alt="birdchannelswitchlabel"
+          src="icons/adblock-picreplacement-images-bird-grayscale.png"
+        />
+        <i
+          class="material-icons circle-icon-bg-24 selected-icon"
+          role="img"
+          i18n-aria-label="selected"
+          >check_circle</i
+        >
+        <i class="adblock-icon circle-icon-bg-24 locked-icon" role="img" i18n-aria-label="selected"
+          >lock_circle</i
+        >
+        <i class="material-icons md-64 hovered" role="img" aria-hidden="true">lock_open</i>
+        <input
+          id="BirdChannel"
+          type="checkbox"
+          class="invisible-overlay"
+          i18n-aria-label="birdchannelswitchlabel"
+        />
+      </li>
+
       <li id="custom-channel-box" class="channel-box image-box custom-channel-disable">
         <a
           id="get-it-now-custom"
